[gd_scene load_steps=24 format=3 uid="uid://c0dgri14uuw70"]

[ext_resource type="Script" uid="uid://bk6qxeoptikjq" path="res://scripts/enemy/basic_enemy.gd" id="1_mi47r"]
[ext_resource type="Script" uid="uid://dahmqbphxewm7" path="res://addons/godot_state_charts/state_chart.gd" id="3_q7ouv"]
[ext_resource type="Texture2D" uid="uid://b6wifdpvel7yy" path="res://assets/creatures/enemy_longneck/longneck1.png" id="3_vk4fr"]
[ext_resource type="Script" uid="uid://0t6twnwvvru2" path="res://addons/godot_state_charts/compound_state.gd" id="4_2dodv"]
[ext_resource type="Texture2D" uid="uid://y7sr1mw8c2ie" path="res://assets/creatures/enemy_longneck/longneck2.png" id="4_viv28"]
[ext_resource type="Texture2D" uid="uid://ctbgoaovtkkyv" path="res://assets/creatures/enemy_longneck/longneck3.png" id="5_j75s6"]
[ext_resource type="Script" uid="uid://cvj8mufd2xs1u" path="res://addons/godot_state_charts/atomic_state.gd" id="5_wma0b"]
[ext_resource type="Script" uid="uid://bff788jqvq01w" path="res://addons/godot_state_charts/transition.gd" id="6_7s1cm"]
[ext_resource type="Texture2D" uid="uid://bt3me43c3msnp" path="res://assets/creatures/enemy_longneck/longneck4.png" id="6_pnv1p"]
[ext_resource type="Texture2D" uid="uid://cqh231pj018o5" path="res://assets/creatures/enemy_longneck/longneck5.png" id="7_5y6yc"]
[ext_resource type="Texture2D" uid="uid://boixyyp84v32v" path="res://assets/creatures/enemy_longneck/longneck6.png" id="8_qdxwj"]
[ext_resource type="Texture2D" uid="uid://bftt6dkjddhcb" path="res://assets/creatures/enemy_longneck/longneck7.png" id="9_aivvf"]
[ext_resource type="Script" uid="uid://dkjrqbk2ts5qd" path="res://scripts/enemy/enemy_hitbox.gd" id="13_lcgj0"]
[ext_resource type="AudioStream" uid="uid://ga8r2ag74xyd" path="res://assets/sfx/other/hitmarker.wav" id="14_ia0ec"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mgjl5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_vk4fr")
}, {
"duration": 1.0,
"texture": ExtResource("4_viv28")
}, {
"duration": 1.0,
"texture": ExtResource("5_j75s6")
}, {
"duration": 1.0,
"texture": ExtResource("6_pnv1p")
}, {
"duration": 1.0,
"texture": ExtResource("7_5y6yc")
}, {
"duration": 1.0,
"texture": ExtResource("8_qdxwj")
}, {
"duration": 1.0,
"texture": ExtResource("9_aivvf")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_i0ffd"]
radius = 26.2562

[sub_resource type="CircleShape2D" id="CircleShape2D_qi61h"]
radius = 400.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o434b"]
radius = 1000.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0tc3i"]
radius = 59.7097

[sub_resource type="Gradient" id="Gradient_ia0ec"]
colors = PackedColorArray(0.509751, 0.0450778, 0.598892, 1, 0.81502, 3.58574e-06, 7.70092e-07, 1)

[sub_resource type="Curve" id="Curve_lcgj0"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0, -1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_lcgj0"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ia0ec"]
gradient = SubResource("Gradient_lcgj0")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8, 0.8)

[node name="BasicEnemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_mi47r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -105)
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_mgjl5")
autoplay = "default"
frame_progress = 0.797158

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(6, 6)
shape = SubResource("CircleShape2D_i0ffd")
debug_color = Color(0.00784314, 0.701961, 0, 0.341176)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="DetectionRadius" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
shape = SubResource("CircleShape2D_qi61h")
debug_color = Color(0, 0.6, 0.701961, 0.219608)

[node name="ChaseRadius" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseRadius"]
shape = SubResource("CircleShape2D_o434b")
debug_color = Color(0, 0.6, 0.701961, 0.219608)

[node name="RecalculatePath" type="Timer" parent="."]
wait_time = 0.16
autostart = true

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_q7ouv")

[node name="EnemyBehaviour" type="Node" parent="StateChart"]
script = ExtResource("4_2dodv")
initial_state = NodePath("Passive")

[node name="Passive" type="Node" parent="StateChart/EnemyBehaviour"]
script = ExtResource("4_2dodv")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/EnemyBehaviour/Passive"]
script = ExtResource("5_wma0b")

[node name="To Wander State" type="Node" parent="StateChart/EnemyBehaviour/Passive/Idle"]
script = ExtResource("6_7s1cm")
to = NodePath("../../Wander")
event = &"wander"
delay_in_seconds = "0.0"

[node name="Wander" type="Node" parent="StateChart/EnemyBehaviour/Passive"]
script = ExtResource("5_wma0b")

[node name="To Idle" type="Node" parent="StateChart/EnemyBehaviour/Passive/Wander"]
script = ExtResource("6_7s1cm")
to = NodePath("../../Idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="To Chase Player Detected" type="Node" parent="StateChart/EnemyBehaviour/Passive"]
script = ExtResource("6_7s1cm")
to = NodePath("../../Active/Chase")
event = &"player_detected"
delay_in_seconds = "0.0"

[node name="To Search" type="Node" parent="StateChart/EnemyBehaviour/Passive"]
script = ExtResource("6_7s1cm")
to = NodePath("../../Active/Search")
event = &"to_search"
delay_in_seconds = "0.0"

[node name="Active" type="Node" parent="StateChart/EnemyBehaviour"]
script = ExtResource("4_2dodv")
initial_state = NodePath("Chase")

[node name="Chase" type="Node" parent="StateChart/EnemyBehaviour/Active"]
script = ExtResource("5_wma0b")

[node name="To Search" type="Node" parent="StateChart/EnemyBehaviour/Active/Chase"]
script = ExtResource("6_7s1cm")
to = NodePath("../../Search")
event = &"to_search_from_chase"
delay_in_seconds = "0.0"

[node name="Search" type="Node" parent="StateChart/EnemyBehaviour/Active"]
script = ExtResource("4_2dodv")
initial_state = NodePath("SearchLastSeenPosition")

[node name="SearchLastSeenPosition" type="Node" parent="StateChart/EnemyBehaviour/Active/Search"]
script = ExtResource("5_wma0b")

[node name="To Search Area" type="Node" parent="StateChart/EnemyBehaviour/Active/Search/SearchLastSeenPosition"]
script = ExtResource("6_7s1cm")
to = NodePath("../../SearchArea")
event = &"reach_last_seen_position"
delay_in_seconds = "0.0"

[node name="SearchArea" type="Node" parent="StateChart/EnemyBehaviour/Active/Search"]
script = ExtResource("5_wma0b")

[node name="To Pause" type="Node" parent="StateChart/EnemyBehaviour/Active/Search/SearchArea"]
script = ExtResource("6_7s1cm")
to = NodePath("../../Pause")
event = &"search_area_pause"
delay_in_seconds = "0.0"

[node name="Pause" type="Node" parent="StateChart/EnemyBehaviour/Active/Search"]
script = ExtResource("5_wma0b")

[node name="To Search Area" type="Node" parent="StateChart/EnemyBehaviour/Active/Search/Pause"]
script = ExtResource("6_7s1cm")
to = NodePath("../../SearchArea")
delay_in_seconds = "1"

[node name="To Chase From Search" type="Node" parent="StateChart/EnemyBehaviour/Active/Search"]
script = ExtResource("6_7s1cm")
to = NodePath("../../Chase")
event = &"to_chase_from_search"
delay_in_seconds = "0.0"

[node name="To Chase Player Detected" type="Node" parent="StateChart/EnemyBehaviour/Active/Search"]
script = ExtResource("6_7s1cm")
to = NodePath("../../Chase")
event = &"player_detected"
delay_in_seconds = "0.0"

[node name="To Chase" type="Node" parent="StateChart/EnemyBehaviour/Active/Search"]
script = ExtResource("6_7s1cm")
to = NodePath("../../Chase")
event = &"to_chase"
delay_in_seconds = "0.0"

[node name="To Return" type="Node" parent="StateChart/EnemyBehaviour/Active/Search"]
script = ExtResource("6_7s1cm")
to = NodePath("../../Return")
event = &"to_return"
delay_in_seconds = "0.0"

[node name="Return" type="Node" parent="StateChart/EnemyBehaviour/Active"]
script = ExtResource("5_wma0b")

[node name="To Passive" type="Node" parent="StateChart/EnemyBehaviour/Active/Return"]
script = ExtResource("6_7s1cm")
to = NodePath("../../../Passive")
event = &"reach_initial_position"
delay_in_seconds = "0.0"

[node name="To Chase" type="Node" parent="StateChart/EnemyBehaviour/Active/Return"]
script = ExtResource("6_7s1cm")
to = NodePath("../../Chase")
event = &"to_chase"
delay_in_seconds = "0.0"

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0
script = ExtResource("13_lcgj0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_0tc3i")
debug_color = Color(0.7, 0.647647, 0, 0.42)

[node name="EliteEffects" type="Node2D" parent="."]
visible = false

[node name="CPUParticles2D" type="CPUParticles2D" parent="EliteEffects"]
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2(0, -2)
spread = 90.0
gravity = Vector2(0, -100)
initial_velocity_min = 5.0
initial_velocity_max = 100.0
scale_amount_min = 5.0
scale_amount_max = 10.0
color_ramp = SubResource("Gradient_ia0ec")
hue_variation_min = -0.2
hue_variation_max = -0.2
hue_variation_curve = SubResource("Curve_lcgj0")

[node name="PointLight2D" type="PointLight2D" parent="EliteEffects"]
color = Color(0.315642, 0.0729553, 0.274341, 1)
energy = 3.0
texture = SubResource("GradientTexture2D_ia0ec")
texture_scale = 2.0

[node name="HitSfxPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_ia0ec")
bus = &"Effects"

[node name="AlertStatusLabel" type="Label" parent="."]
offset_left = -21.0
offset_top = -156.0
offset_right = 29.0
offset_bottom = -72.25
theme_override_colors/font_color = Color(0.777344, 0, 0.0226588, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "!!!"

[connection signal="area_entered" from="DetectionRadius" to="." method="_on_detection_radius_area_entered"]
[connection signal="area_entered" from="ChaseRadius" to="." method="_on_chase_radius_area_entered"]
[connection signal="area_exited" from="ChaseRadius" to="." method="_on_chase_radius_area_exited"]
[connection signal="timeout" from="RecalculatePath" to="." method="_on_recalculate_path_timeout"]
[connection signal="state_entered" from="StateChart/EnemyBehaviour/Passive" to="." method="_on_passive_state_entered"]
[connection signal="state_exited" from="StateChart/EnemyBehaviour/Passive" to="." method="_on_passive_state_exited"]
[connection signal="state_entered" from="StateChart/EnemyBehaviour/Passive/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_entered" from="StateChart/EnemyBehaviour/Active" to="." method="_on_active_state_entered"]
[connection signal="state_entered" from="StateChart/EnemyBehaviour/Active/Chase" to="." method="_on_chase_state_entered"]
[connection signal="state_physics_processing" from="StateChart/EnemyBehaviour/Active/Chase" to="." method="_on_chase_state_physics_processing"]
[connection signal="state_entered" from="StateChart/EnemyBehaviour/Active/Search" to="." method="_on_search_state_entered"]
[connection signal="state_physics_processing" from="StateChart/EnemyBehaviour/Active/Search/SearchLastSeenPosition" to="." method="_on_search_last_seen_position_state_physics_processing"]
[connection signal="state_entered" from="StateChart/EnemyBehaviour/Active/Search/SearchArea" to="." method="_on_search_area_state_entered"]
[connection signal="state_exited" from="StateChart/EnemyBehaviour/Active/Search/SearchArea" to="." method="_on_search_area_state_exited"]
[connection signal="state_physics_processing" from="StateChart/EnemyBehaviour/Active/Search/SearchArea" to="." method="_on_search_area_state_physics_processing"]
[connection signal="state_entered" from="StateChart/EnemyBehaviour/Active/Search/Pause" to="." method="_on_pause_state_entered"]
[connection signal="state_exited" from="StateChart/EnemyBehaviour/Active/Search/Pause" to="." method="_on_pause_state_exited"]
[connection signal="state_entered" from="StateChart/EnemyBehaviour/Active/Return" to="." method="_on_return_state_entered"]
[connection signal="state_exited" from="StateChart/EnemyBehaviour/Active/Return" to="." method="_on_return_state_exited"]
[connection signal="state_physics_processing" from="StateChart/EnemyBehaviour/Active/Return" to="." method="_on_return_state_physics_processing"]
